# protein

./: CMakeLists.txt  README.md  instruc.txt  proj_ing.py  todas_tecnicas_eng.py
classifiers/: Test_data_apart.csv  Train_data_apart.csv  interface_data_sola.csv  interface_data_sola_filtrado.csv  proj_ing.py  redes_tuning.py  tec_test.py  test_cross_comp.py  todas_tecnicas_eng.py  tun_data_bag.py  ver_random_forest_bag.py
pyquate_app/: DFT.py  datap.py
src/: Rootgrapher.h  adft.hpp  bfactos.hpp  clases.hpp  conservation.hpp  gpu.cu  inter.cu  lectura.hpp  main.cc
